[package]
name = "run_esc"
version = "0.1.0"
authors = ["chrism"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysfs-pwm = {git = "https://github.com/rust-embedded/rust-sysfs-pwm.git", branch = "master"}
simple-signal = "1.1.1"